@@ -1,3 +1,7 @@
+2009-06-17  higepon  <higepon@users.sourceforge.jp>
+
+        * ListProcedures.cpp : Added vector-set!, vector-ref, vector-length and make-vector. Thanks to mrc.mgg.
+
 2009-06-16  higepon  <higepon@users.sourceforge.jp>
 
         * Arithmetic.cpp (numberToString): Fixed number->string +nan.0, +inf.0 and -inf.0 . Thanks to mrc.mgg.
